rgbds-0.6.1/test/asm/load-fragment.err
error: load-fragment.asm(2):
    `LOAD FRAGMENT` is not allowed
error: Assembly aborted (1 error)!
