rgbds-0.6.1/test/asm/load-fragment.asm
SECTION "A", ROM0
LOAD FRAGMENT "RAM", WRAM0
